<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".view.activitys.FormActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/txt_create_title_eng_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_name_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_name_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_date_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_date_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_hour_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_hour_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_desc_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_detail_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_link_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_link_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_form_amout_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_amount_eng_form"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_form_urlimagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#878383"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activity_form_urlimagen"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#878383" />
            </com.google.android.material.textfield.TextInputLayout>

           <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_activity_form"
                    android:layout_width="300px"
                    android:layout_height="300px"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp"
                    android:background="@drawable/button_rounded"
                    android:text="@string/txt_img_button_eng_form" />


            </LinearLayout> -->

            <Button
                android:id="@+id/bt_add_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="55dp"
                android:background="@drawable/button_rounded"
                android:text="@string/txt_add_button_eng_form"
                app:circularflow_radiusInDP="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>